2006-10-10 00:37-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* English.lproj/GormClassEditor.gorm: Aligned the toggle with
	the classesView.

2006-10-09 23:54-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* English.lproj/GormClassEditor.gorm: Added button and search image.
	* GNUmakefile: Added new tiff files to images.
	* GormCore/GormClassEditor.m: Added toggleView: method.
	* Images/browserView.tiff: Browser image.
	* Images/outlineView.tiff: Outline image.

2006-10-09  Nicola Pero <nicola.pero@meta-innovation.com>

	If you further modify any makefile using ProjectCenter, manually
	edit it before committing removing any line that sets
	GNUSTEP_INSTALLATION_DIR.
	* GNUmakefile: Do not try to set GNUSTEP_INSTALLATION_DIR.
	* Documentation/GNUmakefile: Same change.
	* GormCore/GNUmakefile: Same change.
	* GormObjCHeaderParser/GNUmakefile: Same change.
	* GormPrefs/GNUmakefile: Samce change.
	
2006-10-08 20:32-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Resources/ClassInformation.plist: Add NSSearchField and
	NSSearchFieldCell.

2006-10-06  Richard Frith-Macdonald <rfm@gnu.org>

	* GormCore/GormPalettesManager.m: rewrite code to set up drag image
	so we avoid glitches on the pallette view (we no longer use the
	pallette window directly as the cached image window) and ensure that
	the image dragged is all copied correctly to avoid the glitches
	when dragging BSBox and NSScrollView items.

2006-10-06 00:16-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormClassEditor.m: Minor cleanup in handleNotification: 
	method.

2006-10-05 13:16-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* English.lproj/GormClassEditor.gorm: Added new gorm file to hold
	classes view contents as well as search and operations drop down.
	* English.lproj/GormDocument.gorm: Removed search and drop down
	* GNUmakefile: Added new gorm file.
	* GormCore/GormClassEditor.h: new outlets classesView and mainView, 